a lot of tests and a lot of fixes

--- a/test/e2e-config.yaml
+++ b/test/e2e-config.yaml
@@ -4,11 +4,9 @@ api:
 
 mcp:
   port: 3000
-  #mode: "stdio"
-  #mode: "http"
-  mode: "both"
+  mode: "http"
   http_port: 8888
 
 logging:
   level: "info"
-  format: "json"
+  format: "text"
