--- a/config.yaml
+++ b/config.yaml
@@ -1,14 +1,41 @@
 api:
-  base_url: "http://localhost:8080"
+  base_url: "https://localhost:8080"  # Now HTTPS
   timeout: "30s"
+  ssl:
+    verify: true                      # Verify server certificates
+    ca_file: ""                       # Custom CA bundle (optional)
+    client_cert: ""                   # Client certificate (optional - mTLS)
+    client_key: ""                    # Client private key (optional - mTLS)
+    insecure_skip_verify: false       # Never skip in production
 
 mcp:
   port: 3000
-  #mode: "stdio"
-  #mode: "http"
   mode: "both"
   http_port: 8888
+  ssl:
+    enabled: true                     # SSL required when true
+    cert_file: "certs/server.crt"     # Server certificate
+    key_file: "certs/server.key"      # Server private key
+    ca_file: ""                       # CA for client cert verification (optional)
+    min_version: "1.2"                # Minimum TLS version
+    max_version: "1.3"                # Maximum TLS version
+    cipher_suites: []                 # Empty = use Go defaults (secure)
+    require_client_cert: false        # mTLS optional
+    hsts_max_age: 31536000           # HSTS 1 year
+    auto_redirect_http: false         # Don't redirect HTTP to HTTPS
+    auto_generate_certs: true         # Fallback to self-signed
+    auto_cert_hosts: ["localhost", "127.0.0.1"] # Hosts for auto-generated certs
 
 logging:
   level: "info"
   format: "json"
+
+# Environment-specific overrides
+development:
+  mcp:
+    ssl:
+      enabled: false                  # Disabled in development
+      auto_generate_certs: true       # But ready to enable
+  api:
+    ssl:
+      insecure_skip_verify: true      # Allow self-signed in dev
